--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,38 +2,49 @@ name: CI
 
 on:
   push:
-    branches: [main, dev]
+    branches: [ main, dev ]
   pull_request:
-    branches: [main, dev]
+    branches: [ main, dev ]
+
+permissions:
+  contents: read
 
 jobs:
-  build-and-test:
+  ci:
+    name: CI — lint, typecheck, build
     runs-on: ubuntu-latest
-
     steps:
-      - name: 🧩 Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: 🛠️ Setup Node.js
+      - name: Setup Node.js (cache pnpm)
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '18'
           cache: 'pnpm'
+          cache-dependency-path: pnpm-lock.yaml
 
-      - name: 🧰 Install pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
 
-      - name: 📦 Install dependencies
+      - name: Restore turborepo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: 🔍 Lint
-        run: pnpm lint
+      - name: Lint
+        run: pnpm -w run lint
 
-      - name: 🧪 Run tests
-        run: pnpm test
+      - name: Typecheck
+        run: pnpm -w run check-types
 
-      - name: 🏗️ Build all packages
-        run: pnpm build
-
+      - name: Build
+        run: pnpm -w run build
