--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,20 +22,17 @@ services:
       - "6379:6379"
 
   kafka:
-    image: bitnami/kafka:3.8
+    image: apache/kafka:latest
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@localhost:9092
       - ALLOW_PLAINTEXT_LISTENER=yes
-    depends_on:
-      - zookeeper
     ports:
       - "9092:9092"
 
-  zookeeper:
-    image: bitnami/zookeeper:3.9
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
 
   # ----------- Services -----------
   auth:
