--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     environment:
       NODE_ENV: development
       DATABASE_URL: postgres://admin:admin@postgres:5432/coredb
-      REDIS_URL: redis://redis:6379
+      REDIS_URL: redis://reds:6379
     volumes:
       - ./packages/auth:/app/packages/auth
       - /app/node_modules
